log
Thu 25 Apr 2024 09:20:14 PM UTC: 
 hashmap.c | 113 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 104 insertions(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:77:3: error: ‘else’ without a previous ‘if’
   77 |   else
      |   ^~~~
Compilation failed
e92871f
Thu 25 Apr 2024 09:21:44 PM UTC: 
 hashmap.c | 13 +++----------
 1 file changed, 3 insertions(+), 10 deletions(-)
 tests:  2|5
total_score: 20/70
64b50d0
Thu 25 Apr 2024 09:30:46 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
eb25d5e
Thu 25 Apr 2024 09:30:57 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
683e88e
Thu 25 Apr 2024 09:37:28 PM UTC: 
 hashmap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 40/70
6217c3d
Thu 25 Apr 2024 09:38:15 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 40/70
b60eb61
Thu 25 Apr 2024 09:38:50 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|3
total_score: 40/70
5a831bb
Thu 25 Apr 2024 09:54:45 PM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|0
5fcd5d6
Thu 25 Apr 2024 09:56:56 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  11|3
total_score: 40/70
793805e
Thu 25 Apr 2024 09:57:49 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|3
total_score: 40/70
7ff735a
Thu 25 Apr 2024 09:58:54 PM UTC: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  11|3
total_score: 40/70
0610e1b
Thu 25 Apr 2024 10:00:11 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|3
total_score: 40/70
9442720
Thu 25 Apr 2024 10:02:45 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1ceae52
Thu 25 Apr 2024 10:03:02 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|3
total_score: 40/70
1f41044
Thu 25 Apr 2024 10:08:46 PM UTC: 
 hashmap.c | 16 ++++++++++------
 1 file changed, 10 insertions(+), 6 deletions(-)
 tests:  12|3
total_score: 40/70
07cc51a
Thu 25 Apr 2024 10:09:39 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  12|3
total_score: 40/70
79adb71
Thu 25 Apr 2024 10:10:48 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  12|3
total_score: 40/70
6303acc
Thu 25 Apr 2024 10:16:36 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  12|3
total_score: 40/70
5176c7b
Sat 27 Apr 2024 01:16:41 AM UTC: 
 hashmap.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
bf32108
Sat 27 Apr 2024 01:22:27 AM UTC: 
 hashmap.c | 37 ++-----------------------------------
 1 file changed, 2 insertions(+), 35 deletions(-)
 tests:  15|2
total_score: 50/70
983c45b
Sat 27 Apr 2024 01:25:01 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
95083bb
Sat 27 Apr 2024 01:29:21 AM UTC: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:101:10: error: unused variable ‘old_buckets’ [-Werror=unused-variable]
  101 |   Pair** old_buckets = map->buckets;
      |          ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fd154b9
Sat 27 Apr 2024 01:32:18 AM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:105:13: error: passing argument 1 of ‘insertMap’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  105 |   insertMap(old_buckets);
      |             ^~~~~~~~~~~
      |             |
      |             Pair **
In file included from test.c:4:
hashmap.c:58:26: note: expected ‘HashMap *’ {aka ‘struct HashMap *’} but argument is of type ‘Pair **’
   58 | void insertMap(HashMap * map, char * key, void * value)
      |                ~~~~~~~~~~^~~
In file included from test.c:4:
hashmap.c:105:3: error: too few arguments to function ‘insertMap’
  105 |   insertMap(old_buckets);
      |   ^~~~~~~~~
In file included from test.c:4:
hashmap.c:58:6: note: declared here
   58 | void insertMap(HashMap * map, char * key, void * value)
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c0c929b
Sat 27 Apr 2024 01:41:10 AM UTC: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:103:26: error: too few arguments to function ‘calloc’
  103 |   map->buckets = (Pair**)calloc(sizeof(Pair*) * map->capacity);
      |                          ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
790be5c
Sat 27 Apr 2024 01:41:50 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:103:27: error: too few arguments to function ‘calloc’
  103 |   map->buckets = (Pair**) calloc(sizeof(Pair*) * map->capacity);
      |                           ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
b4b88f2
Sat 27 Apr 2024 01:45:53 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:80:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   80 |   return NULL;
      |          ^~~~
hashmap.c:58:6: note: declared here
   58 | void insertMap(HashMap * map, char * key, void * value)
      |      ^~~~~~~~~
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:106:27: error: too few arguments to function ‘calloc’
  106 |   map->buckets = (Pair**) calloc(sizeof(Pair*) * map->capacity);
      |                           ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
74d6245
